# IndastrialProgramming

./: .clang-format  .clang-tidy  .gitignore  README.md  pre-commit.sh
LAB1/: test.txt
LAB1/app/: CMakeLists.txt
LAB1/modules/data_processor/: CMakeLists.txt
LAB1/modules/logger/include/: logger.h
LAB1/modules/logger/src/: logger.cpp
LAB1/tests/: test_processor.cpp
LAB1_TEMPLATE/: CMakeLists.txt
LAB1_TEMPLATE/app/: main.cpp
LAB1_TEMPLATE/modules/data_processor/include/: data_processor.h
LAB1_TEMPLATE/modules/data_processor/src/: data_processor.cpp
LAB1_TEMPLATE/modules/logger/: CMakeLists.txt
LAB1_TEMPLATE/modules/user_interface/: CMakeLists.txt
LAB1_TEMPLATE/modules/user_interface/include/: ui.h
LAB1_TEMPLATE/modules/user_interface/src/: ui.cpp
LAB1_TEMPLATE/tests/: CMakeLists.txt
LAB2/: CMakeLists.txt  generate.cpp  generate.hpp  generate_BACKUP_2406.cpp  generate_LOCAL_2406.cpp  logger.cpp  logger.hpp  main.cpp  main.cpp.orig  resolution_of_merger_conflict.txt
LAB3/LAB2_TEMPLATE/: Dockerfile  docker-compose.yml
LAB3/LAB2_TEMPLATE/logstash/: logstash.conf
LAB3/LAB2_TEMPLATE/prometheus/: prometheus.yml
LAB3/LAB2_TEMPLATE/src/: CMakeLists.txt  httplib.h  main.cpp
